Fixed alot of issues and aligned the images on the main page.

--- a/css/Style.css
+++ b/css/Style.css
@@ -16,19 +16,16 @@ header
     text-align: center;
     font-size: 4em;
     line-height: 2em;
-    font-family: "Bloody Font";
+    font-family: "Arnod";
 }
 
 /* Font */
-@font-face {
+@font-face 
+{
     font-family: "Arnod";
     src: url("css/Arnod.otf");
 }
 
-@font-face {
-    font-family: "Bloody Font";
-    src: url("css/BloodttypepersonaluseBold-OVe6e.otf");
-}
 
 /* Navbar */
 #navbar
@@ -50,7 +47,7 @@ header
     color:#d64612;
     margin-top: 8px;
     margin-left:8px;
-    padding:8px;
+    padding:15px;
     border-style: solid;
     border-width:3px;
     border-color:black
@@ -67,11 +64,13 @@ footer
 {
     color:#d64612;
     text-align: center;
+    clear: both;
 }
 
 h1
 {
     margin-bottom: 20px;
+    font-family: "Arnod";
 }
 
 .socialmedia
@@ -81,6 +80,40 @@ h1
 
 h6
 {
-    color:#d64612
+    color:#d64612;
+    font-family: "Arnod";
 }
 
+/* Music Page CSS */
+
+h2
+{
+    color:#d64612;
+    font-family: "Arnod";
+}
+
+#MusicAlbum1
+{
+    color:#d64612;
+    float: left;
+    width: 250px;
+    height: 500px;
+    text-align: center;
+    margin-bottom: 50px;
+    border-style: solid;
+    border-color:white;
+    border-width: 4px;
+}
+
+#MusicAlbum2
+{
+    color:#d64612;
+    float: right;
+    width: 250px;
+    height: 500px;
+    text-align: center;
+    margin-bottom: 50px;
+    border-style: solid;
+    border-color:white;
+    border-width: 4px;
+}
